spacing fixed

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -60,7 +60,7 @@ p {
 }
 
 .container {
-    margin: 10vh auto;
+    margin: var(--bt-spacing) auto;
 }
 
 .container>.row {
